<resources>
    <string name="app_name">Praca inzynierska</string>
    <string name="wsp_lookator">Współlookator+</string>
    <string name="lista_zakup_w">Lista zakupów</string>
    <string name="terminarz">Terminarz</string>
    <string name="czat">Czat</string>
    <string name="kalambury">Kalambury</string>
    <string name="o">O</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="pok_j_gier">Pokój gier</string>
    <string name="co_tam">Cośtam</string>
    <string name="kalendarz">Kalendarz</string>
    <string name="grupa">Grupa</string>
    <string name="profil">Profil</string>
    <string name="zarejestruj_si_zaloguj_si">Zarejestruj się/Zaloguj się</string>
    <string name="login">Login</string>
    <string name="has_o">Hasło</string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="nie_masz_konta">Nie masz konta?</string>
    <string name="zarejestruj_si">Zarejestruj się</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="login1">Login:</string>
    <string name="has_o1">Hasło:</string>
    <string name="email">Email:</string>
    <string name="imi">Imię:</string>
    <string name="nazwisko">Nazwisko:</string>
    <string name="data_urodzenia">Data urodzenia:</string>
    <string name="rejestracja_u_ytkownika">Rejestracja użytkownika</string>
    <string name="dd_mm_rrrr">dd.mm.rrrr</string>
    <string name="edytuj_zdj_cie">Edytuj zdjęcie</string>
    <string name="zdj_cie_profilowe">Zdjęcie profilowe</string>
    <string name="je_li_tw_j_login_ci_nie_pasuje_nzawsze_mo_esz_go_zmieni">Jeśli Twój nick Ci nie pasuje, \nzawsze możesz go zmienić</string>
    <string name="zmie_login">Zmień login</string>
    <string name="zmie_has_o">Zmień hasło</string>
    <string name="regularnie_zmieniane_has_o_nzwi_ksza_bezpiecze_stwo_konta">Regularnie zmieniane hasło \nzwiększa bezpieczeństwo konta</string>
    <string name="wyloguj_si">Wyloguj się</string>
    <string name="do_cz_do_grupy">Dołącz do grupy +</string>
    <string name="zdj_cie_grupy">Zdjęcie grupy</string>
    <string name="nazwa_grupy">Nazwa grupy</string>
    <string name="opis_grupy">Opis grupy</string>
    <string name="zmie_zdj_cie_grupy">Zmień zdjęcie grupy</string>
    <string name="zmie_nazw_grupy">Zmień nazwę grupy</string>
    <string name="zmie_opis_grupy">Zmień opis grupy</string>
    <string name="do_cz_do_czatu_grupowego">Dołącz do czatu grupowego</string>
    <string name="pa_stwa_miasta">Państwa miasta</string>
    <string name="wi_cej_wkr_tce">Więcej wkrótce...</string>
    <string name="rozwi_zywanie_spor_w">Rozwiązywanie sporów</string>
    <string name="rzut_monet">Rzut monetą</string>
    <string name="rzut_kostk">Rzut kostką</string>
    <string name="rzu_kostk">Rzuć kostką</string>
    <string name="wyrzuci_e_tak_liczb_oczek">Wyrzuciłeś taką liczbę oczek:</string>
    <string name="monet_rzuci_e">Monetą rzuciłeś:</string>
    <string name="rzu_monet">Rzuć monetą</string>
    <string name="zdj_cie_kostki">zdjęcie kostki</string>
    <string name="zdj_cie_monety">Zdjęcie monety</string>
    <string name="liczba_produkt_w">Liczba \nproduktów</string>
    <string name="nazwa_produktu">Nazwa \nproduktu</string>
    <string name="zaznacz_kupione">Zaznacz \nkupione</string>
    <string name="dodaj_produkt_do_listy">Dodaj produkt do listy</string>
    <string name="liczba_sztuk">Liczba sztuk:</string>
    <string name="nazwa_produktu1">Nazwa \n produktu:</string>
    <string name="data">Data:</string>
    <string name="od">Od:</string>
    <string name="do_godziny">Do:</string>
    <string name="dodawanie_wydarzenia_do_listy">Dodawanie wydarzenia do listy</string>
    <string name="nazwa_wydarzenia">Nazwa wydarzenia:</string>
    <string name="wybierz_dat_wydarzenia">Wybierz datę wydarzenia</string>
    <string name="wybierz_godzin_rozpocz_cia">Wybierz godzinę rozpoczęcia</string>
    <string name="wybierz_godzin_zako_czenia">Wybierz godzinę zakończenia</string>
    <string name="potwierd">Potwierdź</string>
    <string name="wybierz_dat_rozpocz_cia">Wybierz datę rozpoczęcia</string>
    <string name="wybrana_data">Wybrana data:</string>
    <string name="wybrana_godzina">Wybrana godzina:</string>
    <string name="wybierz_dat_zako_czenia">Wybierz datę zakończenia</string>
    <string name="do_cz_do_grupy1">Dołącz do grupy</string>
    <string name="utworz_grupe">Utworz grupe</string>
    <string name="crewmate">Crewmate</string>
    <string name="zalogowano_jako">Zalogowano jako:</string>
    <string name="potwierd_opcj">Potwierdź opcję</string>
    <string name="dodaj_wydarzenie_do_listy">Dodaj wydarzenie do listy</string>
    <string name="data_zakupu">Data \nzakupu</string>
    <string name="autor">Autor:</string>
    <string name="utw_rz_grup">Utwórz grupę</string>
    <string name="powt_rz_has_o">Powtórz hasło:</string>
    <string name="zmie_email">Zmień email</string>
    <string name="zmie_nick">Zmień nick</string>
    <string name="zawsze_mo_esz_chcie_zmieni_ntak_e_sw_j_adres_mailowy">Zawsze możesz chcieć zmienić \ntakże swój adres mailowy</string>
    <string name="opu_grup">Opuść grupę</string>
    <string name="cz_onkowie">Członkowie</string>
    <string name="imie_grupowicza">Imię</string>
    <string name="nazwisko_grupowicza">Nazwisko</string>
    <string name="nick">Nick</string>
    <string name="wyszukaj_grup">Wyszukaj grupę</string>
    <string name="zmie_zdj_cie">Zmień zdjęcie</string>
    <string name="zmie_nazw">Zmień nazwę</string>
    <string name="zmie_opis">Zmień opis</string>
    <string name="szukaj_grupy">Szukaj grupy</string>
    <string name="dodaj_wydarzenie_ndo_listy">Dodaj wydarzenie \ndo listy</string>
    <string name="organizer">Organizer</string>
    <string name="login_reg">Login</string>
    <string name="terminarz1">Terminarz</string>
    <string name="kalendarz1">Kalendarz</string>
    <string name="prognoza_pogody">Prognoza pogody</string>
    <string name="to_do_list">To-do list</string>
    <string name="wyloguj_si1">Wyloguj się</string>
    <string name="terminarz_na_dzi">Terminarz na dziś</string>
    <string name="to_do_list1">To-Do List</string>
    <string name="deadline">Deadline:</string>
    <string name="wybierz_godzin_terminu">Wybierz godzinę terminu</string>
    <string name="wybierz_dat_terminu">Wybierz datę terminu</string>
    <string name="nazwa">Nazwa:</string>
    <string name="edytuj">Edytuj</string>
    <string name="zako_cz">Zakończ</string>
    <string name="textview">TextView</string>
    <string name="nazwa_produktu2">Nazwa produktu:</string>
    <string name="enter_city_name">ENTER CITY NAME</string>
    <string name="ask_weather">Ask Weather</string>
</resources>