<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginBottom="15dp"
    android:background="#43A8B1">

    <TextView
        android:id="@+id/wydarzenie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/deadline"
        android:textColor="#E8EAF6"
        app:layout_constraintEnd_toStartOf="@id/godzina_deadline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zakoncz_checkbox" />

    <TextView
        android:id="@+id/godzina_deadline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBaseline_toBaselineOf="@id/deadline"
        app:layout_constraintEnd_toStartOf="@id/data_deadline"
        app:layout_constraintStart_toEndOf="@+id/deadline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/data_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBaseline_toBaselineOf="@id/deadline"
        app:layout_constraintStart_toEndOf="@id/godzina_deadline1"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/zakoncz_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/wydarzenie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/edytuj_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/zakoncz_checkbox"
        app:layout_constraintEnd_toStartOf="@+id/zakoncz_checkbox" />

    <CheckBox
        android:id="@+id/w_trakcie_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/edytuj_checkbox"
        app:layout_constraintEnd_toStartOf="@+id/edytuj_checkbox" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:text="Priorytetowo"
        app:layout_constraintBottom_toTopOf="@+id/w_trakcie_checkbox"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/edytuj"
        app:layout_constraintBaseline_toBaselineOf="@id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/zako_cz"
        app:layout_constraintBaseline_toBaselineOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="41dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="40dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>